# benchmarks

./: .gitignore  AUTHORS  Dockerfile  Dockerfile.service_and_web  LICENSE  Makefile  README.md  benchmark_service_client.py  docker-compose.yaml  github_client.py  loki_quickwit_benchmark.md  requirements.txt  run.py
engines/elasticsearch/: Makefile
engines/loki/: Makefile  README.md  loki.yaml  loki_gcs.yaml  vector.yaml  vector_1000streams.yaml  vector_100streams.yaml  vector_25000streams.yaml
engines/opensearch/: Makefile  README.md  docker-compose.yml
engines/quickwit/: Makefile  quickwit.yaml  quickwit_s3.yaml
monitoring/: prometheus.aws.yaml  prometheus.yaml
qbench/: Cargo.toml
qbench/src/: main.rs  utils.rs
qbench/src/sink/: elasticsearch.rs  loki.rs  mod.rs  parseable.rs  quickwit.rs  zincobserve.rs
qbench/src/source/: http.rs  mod.rs
scripts/: download-gh-archive-one-month.py  merge_all_results.py
scripts/create-generated-log-dataset/: config-1.yml  fields.yml  generate.sh  template.tpl
service/: README.md  crud.py  database.py  log_conf.yaml  main.py  models.py  requirements.txt  schemas.py
tracks/generated-logs/: index-config.elasticsearch.json  index-config.opensearch.json  index-config.quickwit-datafusion.yaml  index-config.quickwit.yaml  track-config.yaml
tracks/generated-logs-for-loki/: index-config.quickwit.yaml  log_example.json  track-config.yaml
tracks/gh-archive/: index-config.elasticsearch.json  index-config.quickwit.yaml  track-config.yaml
web/: package-lock.json  package.json
web/public/: index.html  results.json
(+108 files in other folders)
