[package]
name = "qbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-compression = { version = "0.4.3", features = ["gzip", "tokio"] }
async-trait = "0.1"
futures = "0.3.28"
futures-util = "0.3.28"
http = "0.2"
flume = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3.17"
serde_json = "1.0.106"
bytes = "1"
base64 = "0.21.0"
once_cell = "1.18.0"
humansize = "2.1.3"
clap = { version = "4.1.1", features = ["derive", "env"] }
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "io-util"] }
tokio-util = { version = "0.7.8", features = ["compat"]}
tokio-stream = { version = "0.1.14" }
regex = "1"
chrono = "0.4.34"
fnv = "1.0.7"
blake3 = "1.5.1"
rayon = "1.10.0"
rayon-core = "1.12.1"

[profile.release]
#debug = true
